add content in gc optimization